--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
     />
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
@@ -92,7 +92,9 @@
       <section class="section doing">
         <h2 class="section-title">What are we doing</h2>
         <ul class="section-doing-list">
-          <li class="doing-img"><img src="./images/display.jpg" alt="display" width="360" /></li>
+          <li class="doing-img">
+            <img src="./images/display.jpg" alt="display" width="360" />
+          </li>
           <li class="doing-img">
             <img
               src="./images/phone-display.jpg"
@@ -100,7 +102,9 @@
               width="360"
             />
           </li>
-          <li class="doing-img"><img src="./images/phone.jpg" alt="phone" width="360" /></li>
+          <li class="doing-img">
+            <img src="./images/phone.jpg" alt="phone" width="360" />
+          </li>
         </ul>
       </section>
       <!-- section 4  -->
