--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
   </head>
   <body class="page">
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo" href="./index.html"
+      <nav class="header nav">
+        <a class="link header-logo" href="./index.html"
           >Web<span class="logo">Studio</span></a
         >
-        <ul class="header-list">
-          <li class="header-item">
+        <ul class="header list">
+          <li class="header item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
+          <li class="header item">
             <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="header-item">
+          <li class="header item">
             <a class="header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-info">
-        <ul class="header-info-list">
+        <ul class="header-info list">
           <li class="header-info-item">
             <a class="header-info-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -57,7 +57,7 @@
       <!-- section 2 -->
       <section class="section benefits">
         <h2 hidden class="section-title">Our benefits</h2>
-        <ul class="benefits-list">
+        <ul class="benefits list">
           <li class="benefits-item">
             <h3 class="title">Strategy</h3>
             <p class="text">
@@ -91,7 +91,7 @@
       <!-- section 3 -->
       <section class="section doing">
         <h2 class="section-title">What are we doing</h2>
-        <ul class="section-doing-list">
+        <ul class="section-doing list">
           <li class="doing-img">
             <img src="./images/display.jpg" alt="display" width="360" />
           </li>
@@ -110,7 +110,7 @@
       <!-- section 4  -->
       <section class="section-team">
         <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team list">
           <li class="team-item">
             <img src="./images/man.jpg" alt="man" width="264" />
             <h3 class="title">Mark Guerrero</h3>
@@ -139,7 +139,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="header-logo" href="./index.html"
+      <a class="link header-logo" href="./index.html"
         >Web<span class="logo-ftr">Studio</span></a
       >
       <p class="footer-text">
