--- a/portfolio.html
+++ b/portfolio.html
@@ -16,24 +16,24 @@
   </head>
   <body class="page">
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo" href="./index.html"
+      <nav class="header nav">
+        <a class="link header-logo" href="./index.html"
           >Web<span class="logo">Studio</span></a
         >
-        <ul class="header-list">
-          <li class="header-item">
+        <ul class="header list">
+          <li class="header item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
+          <li class="header item">
             <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="header-item">
+          <li class="header item">
             <a class="header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-info">
-        <ul class="header-info-list">
+        <ul class="header-info list">
           <li class="header-info-item">
             <a class="header-info-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -50,7 +50,7 @@
     <main>
       <section class="section-portfolio">
         <h1 hidden>Our works</h1>
-        <ul class="portfolio-btn-list">
+        <ul class="portfolio-btn list">
           <li><button class="hero-btn" type="button">All</button></li>
           <li><button class="hero-btn" type="button">Web Site</button></li>
           <li><button class="hero-btn" type="button">App</button></li>
@@ -59,9 +59,9 @@
         </ul>
 
         <h2 class="section-title" hidden>Portfolio</h2>
-        <ul class="portfolio-list">
+        <ul class="portfolio list">
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row1/img.jpg"
                 alt="Banking App Interface Concept"
@@ -73,7 +73,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row1/img-1.jpg"
                 alt="Cashless Payment"
@@ -85,7 +85,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row1/img-2.jpg"
                 alt="Monitor and phone display"
@@ -97,7 +97,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row2/img.jpg"
                 alt="man holding the steering wheel of a car, taxi service"
@@ -109,7 +109,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row2/img-1.jpg"
                 alt="screenshots of the display of various illustration options"
@@ -121,7 +121,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row2/img-2.jpg"
                 alt="A smiling girl takes an online course"
@@ -133,7 +133,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row3/img.jpg"
                 alt="Instagram Stories Concept"
@@ -145,7 +145,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row3/img-1.jpg"
                 alt="A woman carries vegetables in a bag"
@@ -157,7 +157,7 @@
             >
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
+            <a class="portfolio link" href="">
               <img
                 src="./images/row3/img-2.jpg"
                 alt="A person makes a drawing on a cup of coffee"
@@ -172,7 +172,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="header-logo" href="./index.html"
+      <a class="link header-logo" href="./index.html"
         >Web<span class="logo-ftr">Studio</span></a
       >
       <p class="footer-text">
