--- a/goit-markup-hw-02/goit-markup-hw-02/goit-markup-hw-02/portfolio.html
+++ b/goit-markup-hw-02/goit-markup-hw-02/goit-markup-hw-02/portfolio.html
@@ -40,7 +40,7 @@
         </ul>
       </address>
     </header>
-    <main>
+    <!-- Button section -->
     <section>
       <h1 hidden>Our works</h1>
       <ul>
@@ -50,7 +50,9 @@
         <li><button class="hero-btn" type="button">Design</button></li>
         <li><button class="hero-btn" type="button">Marketing</button></li>
       </ul>
-    
+    </section>
+    <!-- Portfolio section -->
+    <section>
       <h2 hidden>Portfolio</h2>
       <ul>
         <li>
@@ -151,7 +153,6 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </main>
     </footer>
   </body>
 </html>
