--- a/portfolio.html
+++ b/portfolio.html
@@ -22,25 +22,25 @@
         >
         <ul class="header list">
           <li class="header item">
-            <a class="header-link" href="./index.html">Studio</a>
+            <a class="hero header-link" href="./index.html">Studio</a>
           </li>
           <li class="header item">
-            <a class="header-link" href="./portfolio.html">Portfolio</a>
+            <a class="hero header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header item">
-            <a class="header-link" href="">Contacts</a>
+            <a class="hero header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-info">
         <ul class="header-info list">
-          <li class="header-info-item">
-            <a class="header-info-link" href="mailto:info@devstudio.com"
+          <li class="header-info item">
+            <a class="hero header-info-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-info-item">
-            <a class="header-info-link" href="tel:+110001111111"
+          <li class="header-info item">
+            <a class="hero header-info-link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -58,7 +58,6 @@
           <li><button class="hero-btn" type="button">Marketing</button></li>
         </ul>
 
-        <h2 class="section-title" hidden>Portfolio</h2>
         <ul class="portfolio list">
           <li class="portfolio-item">
             <a class="portfolio link" href="">
@@ -68,7 +67,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Banking App Interface Concept</h3>
+              <h2 class="title">Banking App Interface Concept</h2>
               <p class="text">App</p></a
             >
           </li>
@@ -80,7 +79,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Cashless Payment</h3>
+              <h2 class="title">Cashless Payment</h2>
               <p class="text">Marketing</p></a
             >
           </li>
@@ -92,7 +91,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Meditation App</h3>
+              <h2 class="title">Meditation App</h2>
               <p class="text">App</p></a
             >
           </li>
@@ -104,7 +103,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Taxi Service</h3>
+              <h2 class="title">Taxi Service</h2>
               <p class="text">Marketing</p></a
             >
           </li>
@@ -116,7 +115,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Screen Illustrations</h3>
+              <h2 class="title">Screen Illustrations</h2>
               <p class="text">Design</p></a
             >
           </li>
@@ -128,7 +127,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Online Courses</h3>
+              <h2 class="title">Online Courses</h2>
               <p class="text">Marketing</p></a
             >
           </li>
@@ -140,7 +139,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Instagram Stories Concept</h3>
+              <h2 class="title">Instagram Stories Concept</h2>
               <p class="text">Design</p></a
             >
           </li>
@@ -152,7 +151,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Organic Food</h3>
+              <h2 class="title">Organic Food</h2>
               <p class="text">Web Site</p></a
             >
           </li>
@@ -164,7 +163,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Fresh Coffee</h3>
+              <h2 class="title">Fresh Coffee</h2>
               <p class="text">Web Site</p></a
             >
           </li>
