--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
         >
         <ul class="header list">
           <li class="header item">
-            <a class="header-link" href="./index.html">Studio</a>
+            <a class=" hero header-link" href="./index.html">Studio</a>
           </li>
           <li class="header item">
-            <a class="header-link" href="./portfolio.html">Portfolio</a>
+            <a class="hero header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header item">
-            <a class="header-link" href="">Contacts</a>
+            <a class="hero header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-info">
         <ul class="header-info list">
-          <li class="header-info-item">
-            <a class="header-info-link" href="mailto:info@devstudio.com"
+          <li class="header-info item">
+            <a class="hero header-info-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-info-item">
-            <a class="header-info-link" href="tel:+110001111111"
+          <li class="header-info item">
+            <a class="hero header-info-link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
