--- a/portfolio.html
+++ b/portfolio.html
@@ -22,25 +22,25 @@
         >
         <ul class="header list">
           <li class="header item">
-            <a class="hero header-link" href="./index.html">Studio</a>
+            <a class="link header-link" href="./index.html">Studio</a>
           </li>
           <li class="header item">
-            <a class="hero header-link" href="./portfolio.html">Portfolio</a>
+            <a class="link header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header item">
-            <a class="hero header-link" href="">Contacts</a>
+            <a class="link header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-info">
         <ul class="header-info list">
           <li class="header-info item">
-            <a class="hero header-info-link" href="mailto:info@devstudio.com"
+            <a class="link header-info-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-info item">
-            <a class="hero header-info-link" href="tel:+110001111111"
+            <a class="link header-info-link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -51,11 +51,11 @@
       <section class="section-portfolio">
         <h1 hidden>Our works</h1>
         <ul class="portfolio-btn list">
-          <li><button class="hero-btn" type="button">All</button></li>
-          <li><button class="hero-btn" type="button">Web Site</button></li>
-          <li><button class="hero-btn" type="button">App</button></li>
-          <li><button class="hero-btn" type="button">Design</button></li>
-          <li><button class="hero-btn" type="button">Marketing</button></li>
+          <li><button class="portfoli-btn" type="button">All</button></li>
+          <li><button class="portfoli-btn" type="button">Web Site</button></li>
+          <li><button class="portfoli-btn" type="button">App</button></li>
+          <li><button class="portfoli-btn" type="button">Design</button></li>
+          <li><button class="portfoli-btn" type="button">Marketing</button></li>
         </ul>
 
         <ul class="portfolio list">
